<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LText"
            android:textColor="@color/text_hint"
            android:layout_marginBottom="40dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/lEmail"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint"
            android:hint="@string/LEmail"
            android:paddingLeft="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edt_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/lPass"
            android:textColor="@color/black"
            android:hint="@string/LPassword"
            android:textColorHint="@color/text_hint"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edt_text"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/btnLogin"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSign"
            android:text="Don't have an account? Sign Up"
            android:layout_marginTop="20dp"
            android:textColor="@color/primary_blue"
            android:textStyle="bold" />
    </LinearLayout>
</layout>